Converted to old switch statements, added jar.

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ out/production/IdeaProjects/ire/world/Item.class
 out/production/IdeaProjects/ire/world/Room.class
 out/production/IdeaProjects/META-INF/MANIFEST.MF
 SaveFile.txt
+/.idea/shelf/
