Added packr, slightly changed generateStatus().

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ IRE.iml
 /distributable/run.bat
 /distributable/sounds/
 /distributable/startArt.txt
+/distributable/packr-all-3.0.3.jar
+/distributable/windows64/
+/distributable/linux64/
+/distributable/mac/
