Added sounds directly into jar, rather than storing externally.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 SaveFile.txt
 IdeaProjects.iml
 IRE.iml
+/sounds/
 /distributable/runShortcut.ahk
 /distributable/sounds/
 /distributable/startArt.txt
