Moved startArt.txt into resources.

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@
 SaveFile.txt
 IdeaProjects.iml
 IRE.iml
+startArt.txt
 /sounds/
 /distributable/runShortcut.ahk
 /distributable/sounds/
-/distributable/startArt.txt
 /distributable/packr-all-3.0.3.jar
 /distributable/windows64/
 /distributable/linux64/
